[package]
name = "async-middleware"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Holloway <nyxtom@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Simple async middleware functions using tuples as transforms"
homepage = "https://github.com/nyxtom/async-middleware"
repository = "https://github.com/nyxtom/async-middleware"
keywords = ["async", "monad", "traits", "middleware", "futures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
