[package]
name = "async-middleware"
version = "1.0.0"
edition = "2021"
authors = ["Thomas Holloway <nyxtom@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Simple async monad(ish) middleware in Rust using tuples and async trait transforms"
homepage = "https://github.com/nyxtom/async-middleware"
repository = "https://github.com/nyxtom/async-middleware"
keywords = ["async", "monad", "traits", "middleware", "futures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
